@@ -25,6 +25,7 @@ Version 1.5 (not yet released)
 - added sorting by different criteria (#256, #239)
 - improved source files viewer (#346)
 - included outdated documentation was replaced with online wiki docs (#343)
+- more keyboard navigation shortcuts
 
 
 Version 1.4.6
